--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,145 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.pokemon-img{
+  display: flex;
+  justify-content: center;
+
 }
+.pokemon-img img{
+  width: 300px;
+}
+
+
+
+/* // loader */
+.pre-loader{
+	 position: relative;
+	 height: 100vh;
+	 width: 100vw;
+	 padding: 0;
+	 margin: 0;
+}
+ .loader {
+	 position: absolute;
+	 left: 50%;
+	 top: 50%;
+	 transform: translate(-50%, -50%);
+	 width: 60px;
+	 height: 60px;
+	 position: relative;
+}
+ .loader__item {
+	 height: 15px;
+	 width: 15px;
+	 position: absolute;
+	 text-align: center;
+	 font-family: sans-serif;
+	 font-size: 10px;
+	 border-radius: 50%;
+}
+ .loader__item--1 {
+	 top: 15px;
+	 left: 15px;
+	 animation: item1 2s cubic-bezier(0.23, 1, 0.32, 1) infinite;
+	 background: #ef5350;
+}
+ .loader__item--2 {
+	 top: 15px;
+	 left: 30px;
+	 animation: item2 2s cubic-bezier(0.23, 1, 0.32, 1) infinite;
+	 background: #42a5f5;
+}
+ .loader__item--3 {
+	 top: 30px;
+	 left: 15px;
+	 animation: item3 2s cubic-bezier(0.23, 1, 0.32, 1) infinite;
+	 background: #ffee58;
+}
+ .loader__item--4 {
+	 top: 30px;
+	 left: 30px;
+	 animation: item4 2s cubic-bezier(0.23, 1, 0.32, 1) infinite;
+	 background: #66bb6a;
+}
+ @keyframes item1 {
+	 0% {
+		 top: 15px;
+		 left: 15px;
+		 background: #ef5350;
+	}
+	 25% {
+		 top: 0;
+		 left: 0;
+	}
+	 50% {
+		 top: 0;
+		 left: 45px;
+	}
+	 100% {
+		 top: 15px;
+		 left: 30px;
+		 background: #42a5f5;
+	}
+}
+ @keyframes item2 {
+	 0% {
+		 top: 15px;
+		 left: 30px;
+		 background: #42a5f5;
+	}
+	 25% {
+		 top: 0;
+		 left: 45px;
+	}
+	 50% {
+		 top: 45px;
+		 left: 45px;
+	}
+	 100% {
+		 top: 30px;
+		 left: 30px;
+		 background: #66bb6a;
+	}
+}
+ @keyframes item3 {
+	 0% {
+		 top: 30px;
+		 left: 15px;
+		 background: #ffee58;
+	}
+	 25% {
+		 top: 45px;
+		 left: 0;
+	}
+	 50% {
+		 top: 0;
+		 left: 0;
+	}
+	 100% {
+		 top: 15px;
+		 left: 15px;
+		 background: #ef5350;
+	}
+}
+ @keyframes item4 {
+	 0% {
+		 top: 30px;
+		 left: 30px;
+		 background: #66bb6a;
+	}
+	 25% {
+		 top: 45px;
+		 left: 45px;
+	}
+	 50% {
+		 top: 45px;
+		 left: 0;
+	}
+	 100% {
+		 top: 30px;
+		 left: 15px;
+		 background: #ffee58;
+	}}
